user name is showed instead of account

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -120,7 +120,10 @@
                 <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="account-menu">
                     <span *ngIf="!getImageUrl()">
                         <fa-icon icon="user"></fa-icon>
-                        <span jhiTranslate="global.menu.account.main">
+                        <span *ngSwitchCase="true">
+                            {{ account.login }}
+                        </span>
+                        <span *ngSwitchCase="false" jhiTranslate="global.menu.account.main">
                             Account
                         </span>
                     </span>
