--- a/src/main/webapp/app/sales/sales.component.scss
+++ b/src/main/webapp/app/sales/sales.component.scss
@@ -1,6 +1,9 @@
-.ng-autocomplete {
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
   width: 100%;
-  max-width: 600px;
-  display: table;
-  margin: 0 auto;
+}
+
+.example-full-width {
+  width: 100%;
 }
